...
  Widget build(BuildContext context, WidgetRef ref) {
    return DefaultTabController(
      length: 4,
      initialIndex: initialIndex,
      child: Scaffold(
        appBar: AppBar(
          title: const Text('Self Care'),
          bottom: const TabBar(
            isScrollable: true,
            tabs: [
              Tab(text: 'Journal', icon: Icon(Icons.book)),
              Tab(text: 'Focus', icon: Icon(Icons.timer)),
              Tab(text: 'Gratitude', icon: Icon(Icons.favorite)),
              Tab(text: 'Meditation', icon: Icon(Icons.self_improvement)),
            ],
          ),
        ),
        body: const TabBarView(
...
                ref
                    .read(journalControllerProvider.notifier)
                    .addEntry('', controller.text, 'Grateful');
                Navigator.pop(ctx);
              }
            },
            child: const Text('Save'),
          ),
        ],
      ),
    );
  }
}
...
